# cs380c

./: .gitignore
cs380c_lab1/examples/: check-one.sh
cs380c_lab1/lab1/: CMakeLists.txt  compile.sh  run.sh
cs380c_lab1/lab1/include/: ir.h
cs380c_lab1/lab1/src/: basic-block.cpp  function.cpp  instruction.cpp  ir.cpp  main.cpp  opcode.cpp  operand.cpp  program.cpp
cs380c_lab2/examples/: check-one-cfg.sh  check-one.sh  check.sh
cs380c_lab2/lab2/: CMakeLists.txt  compile.sh  example-dse.c  run.sh
cs380c_lab2/lab2/include/: ir.h
cs380c_lab2/lab2/src/: basic-block.cpp  function.cpp  instruction.cpp  main.cpp  opcode.cpp  operand.cpp  program.cpp
cs380c_lab3/lab3/: CMakeLists.txt
